# engram-cli

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/engram_cli/: __init__.py  analyzer.py  discovery.py  generator.py  main.py  model.py  prompts.py  serve.py
src/engram_cli/templates/: viewer.html
tests/: test_analyzer.py  test_discovery.py  test_generator.py  test_model.py  test_serve.py
